fixed textbox not stretching issue

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-red-300: oklch(0.808 0.114 19.571);
     --color-red-500: oklch(0.637 0.237 25.331);
     --color-blue-300: oklch(0.809 0.105 251.813);
     --color-blue-400: oklch(0.707 0.165 254.624);
@@ -352,6 +353,9 @@
   .mt-6 {
     margin-top: calc(var(--spacing) * 6);
   }
+  .mb-6 {
+    margin-bottom: calc(var(--spacing) * 6);
+  }
   .box-border {
     box-sizing: border-box;
   }
@@ -448,6 +452,9 @@
   .h-screen {
     height: 100vh;
   }
+  .max-h-\[45vh\] {
+    max-height: 45vh;
+  }
   .max-h-none {
     max-height: none;
   }
@@ -456,6 +463,9 @@
   }
   .min-h-screen {
     min-height: 100vh;
+  }
+  .w-1 {
+    width: calc(var(--spacing) * 1);
   }
   .w-1\/2 {
     width: calc(1/2 * 100%);
@@ -496,8 +506,20 @@
   .max-w-screen {
     max-width: 100vw;
   }
+  .min-w-\[20px\] {
+    min-width: 20px;
+  }
+  .min-w-\[24vw\] {
+    min-width: 24vw;
+  }
   .min-w-\[240px\] {
     min-width: 240px;
+  }
+  .min-w-\[240vw\] {
+    min-width: 240vw;
+  }
+  .min-w-\[260px\] {
+    min-width: 260px;
   }
   .min-w-\[300px\] {
     min-width: 300px;
@@ -525,6 +547,12 @@
   }
   .grow {
     flex-grow: 1;
+  }
+  .basis-\[30\%\] {
+    flex-basis: 30%;
+  }
+  .basis-\[45\%\] {
+    flex-basis: 45%;
   }
   .basis-auto {
     flex-basis: auto;
@@ -970,6 +998,9 @@
     text-overflow: ellipsis;
     white-space: nowrap;
   }
+  .overflow-hidden {
+    overflow: hidden;
+  }
   .scroll-auto {
     scroll-behavior: auto;
   }
@@ -1102,11 +1133,35 @@
   .bg-\(color\:--my-color\) {
     background-color: var(--my-color);
   }
+  .bg-\[\#3F5B73\] {
+    background-color: #3F5B73;
+  }
+  .bg-\[\#4D6F8B\] {
+    background-color: #4D6F8B;
+  }
+  .bg-\[\#7B9EB6\] {
+    background-color: #7B9EB6;
+  }
+  .bg-\[\#8FAFC4\] {
+    background-color: #8FAFC4;
+  }
+  .bg-\[\#9AB6C7\] {
+    background-color: #9AB6C7;
+  }
   .bg-\[\#0088cc\] {
     background-color: #0088cc;
   }
+  .bg-\[\#88AFC4\] {
+    background-color: #88AFC4;
+  }
+  .bg-\[\#426A89\] {
+    background-color: #426A89;
+  }
   .bg-\[\#A4C3D6\] {
     background-color: #A4C3D6;
+  }
+  .bg-\[\#\] {
+    background-color: #;
   }
   .bg-\[color\:var\(--my-color\)\] {
     background-color: var(--my-color);
@@ -1298,6 +1353,9 @@
   .px-3 {
     padding-inline: calc(var(--spacing) * 3);
   }
+  .px-6 {
+    padding-inline: calc(var(--spacing) * 6);
+  }
   .px-\[15vw\] {
     padding-inline: 15vw;
   }
@@ -1466,8 +1524,20 @@
   .\[color\:red\]\/50\! {
     color: color-mix(in oklab, red 50%, transparent) !important;
   }
+  .text-\[\#4D6F8B\] {
+    color: #4D6F8B;
+  }
   .text-\[\#5A7D9A\] {
     color: #5A7D9A;
+  }
+  .text-\[\#8FAFC4\] {
+    color: #8FAFC4;
+  }
+  .text-\[\#9AB6C7\] {
+    color: #9AB6C7;
+  }
+  .text-\[\#45647F\] {
+    color: #45647F;
   }
   .text-\[\#FFF8E7\] {
     color: #FFF8E7;
@@ -1637,12 +1707,25 @@
     --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentColor);
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
+  .ring-4 {
+    --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentColor);
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
   .inset-ring {
     --tw-inset-ring-shadow: inset 0 0 0 1px var(--tw-inset-ring-color, currentColor);
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .shadow-initial {
     --tw-shadow-color: initial;
+  }
+  .ring-\[\#7B9EB6\] {
+    --tw-ring-color: #7B9EB6;
+  }
+  .ring-\[7B9EB6\] {
+    --tw-ring-color: 7B9EB6;
+  }
+  .ring-red-300 {
+    --tw-ring-color: var(--color-red-300);
   }
   .inset-shadow-initial {
     --tw-inset-shadow-color: initial;
@@ -1928,6 +2011,21 @@
       @media (hover: hover) {
         color: var(--color-white);
       }
+    }
+  }
+  .sm\:basis-\[45\%\] {
+    @media (width >= 40rem) {
+      flex-basis: 45%;
+    }
+  }
+  .md\:basis-\[48\%\] {
+    @media (width >= 48rem) {
+      flex-basis: 48%;
+    }
+  }
+  .lg\:basis-\[30\%\] {
+    @media (width >= 64rem) {
+      flex-basis: 30%;
     }
   }
 }
